sandbox/output
Reorder.java:26: error: cannot find symbol
                List<Integer> newList = new ArrayList<Integer>(result1.get(0));
                                                               ^
  symbol:   variable result1
  location: class Reorder
Reorder.java:32: error: cannot find symbol
                List<Integer> newList = new ArrayList<Integer>(result1.get(0));
                                                               ^
  symbol:   variable result1
  location: class Reorder
2 errors
